KRSupdated_09122021/force-app/main/default/objects/Coupon__c/Coupon__c.object-meta.xml
<CustomObject>
    <label>Coupon</label>
    <nameField>
        <label>Coupon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>