KRSupdated_09122021/force-app/main/default/objects/Coupon__c/fields/CouponCode__c.field-meta.xml
<CustomField>
    <fullName>CouponCode__c</fullName>
    <label>CouponCode</label>
    <length>12</length>
    <type>Text</type>
</CustomField>