KRSupdated_09122021/force-app/main/default/objects/Coupon__c/fields/DiscountMode__c.field-meta.xml
<CustomField>
    <fullName>DiscountMode__c</fullName>
    <label>DiscountMode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>