KRSupdated_09122021/force-app/main/default/objects/Coupon__c/fields/DiscountValue__c.field-meta.xml
<CustomField>
    <fullName>DiscountValue__c</fullName>
    <label>DiscountValue</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>