KRSupdated_09122021/force-app/main/default/objects/Coupon__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <label>ExpiryDate</label>
    <type>Date</type>
</CustomField>