KRSupdated_09122021/force-app/main/default/objects/Coupon__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gift Card</fullName>
            </value>
            <value>
                <fullName>Coupon Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>